Ryde/src/main/webapp/resources/css/siteStyles.css
/* Cascading Style Sheets (CSS) Version 3 Style Definitions by Osman Balci */

html, body {
    /*background-color: #7ec99d; */
    background-image: url(./images/splashBG.png);
    /* Stretch the background image to cover the entire screen */
    -webkit-background-size: cover; /* For WebKit */
    -moz-background-size: cover;    /* For Mozilla */
    -o-background-size: cover;      /* For Opera */
    background-size: cover;         /* Generic */
    background-repeat: no-repeat;   /* Do not repeat the image */
    width: 100%;                    /* Set page width horizontally 100% */
    height: 100%;                   /* Set page height vertically 100% */
}

/* Style the text used under the standard HTML tag "body" */
body {
    font-family: "Times New Roman", Times, Serif;
    font-size: 12pt;
    font-style: normal;
    font-weight: normal;
    text-decoration: none;
    color: black;
    margin: 0px;
}

/* Style the text used under the standard HTML tag "p" for paragraph */
p {
    font-family: "Times New Roman", Times, serif;
    font-size: 12pt;
    font-style: normal;
    font-weight: normal;
    text-decoration: none;
    text-align: left;
    color: black;
}

/* Style the text used under the standard HTML tag "h1" for header 1 */
h1 {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 32pt;
    font-style: normal;
    font-weight: bold;
    text-decoration: none;
    color: #000000;
}

/* Style the text used under the standard HTML tag "h2" for header 2 */
h2 {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 18pt;
    font-style: normal;
    font-weight: normal;
    text-decoration: none;
    color: #000000;
}

/* Style the text used under the standard HTML tag "h1" for header 1 */
h3 {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 18pt;
    font-style: normal;
    font-weight: bold;
    text-decoration: none;
    color: #CC0000;
    text-align: center;
    
}

/*** Styling Hyperlinks ***

Hyperlinks (or links) are styled differently depending on what state they are in:

    a:link      - normal state (unvisited link)
    a:visited   - visited state (link clicked on by user earlier)
    a:hover     - mouse over state (link when the user hovers over it)
    a:active    - active state (link currently clicked on by user)
 */

/* Set the font family for the standard HTML tag "a" for hyperlinks */
a {
    font-family: Arial, Helvetica, sans-serif
}

a:link {
    text-decoration: none; /* Do not underline the link in normal state */
}

a:visited {
    text-decoration: none; /* Do not underline the link in visited state */
}

a:hover {
    text-decoration: underline; /* Underline the link in hover state */
}

a:active {
    text-decoration: underline; /* Underline the link in active state */
}

/**
 * Template Component Styles
 */

/* In HTML or XHTML code, we refer to a CSS style defined in a CSS file by
using Selectors. 

See CSS Selector Reference at http://www.w3schools.com/cssref/css_selectors.asp

id is used if the style is used only once indicating that it is unique.
class is specified as .stylename and is used many times.
*/

/* The page id is used in siteTemplate.xhtml as <div id="page"> to 
style the text within the div content of the siteTemplate. */
#page {
    font-family: "Times New Roman", Times, Serif;
    font-size: 12pt;
    font-style: normal;
    font-weight: normal;
    text-decoration: none;
    color: black;
}

/* The header id is used in siteTemplate.xhtml as <div id="header"> to 
style the header component of the siteTemplate */
#header {
    width: 100%;
    height: 50px;
    margin-bottom: 16px;
}

.subMenu .ui-menuitem-text {
    color: #ffffff;
}

.subMenu .ui-menu-child {
    background: #a8ced7;
}

/* The editableContent id is used in siteTemplate.xhtml as <div id="editableContent"> to 
style the editableContent component of the siteTemplate */
#editableContent {
    width: 100%;
    height: calc(100% - 170px); 
    margin-left: 0px;
    margin-right: 0px;
    margin-bottom: 0px;
}

/* The footer id is used in siteTemplate.xhtml as <div id="footer"> to 
style the footer component of the siteTemplate */
#footer {
   position:absolute;
   bottom:-10%;
   width:100%;
   height:60px;   /* Height of the footer */
}

.footerLink {
    color: white;
    text-decoration: underline;
}

/* Set panel grid width to %80 percent of the screen width */
#footerPanelGrid {
   width: 80%;
}

/* Right align panel group */
#rightAlignPanelGroup {
    float: right;
}

/**
 * An example CSS3 Button Style
 */
.button {
    border:1px solid #999999; -webkit-border-radius: 42px; -moz-border-radius: 42px;border-radius: 42px;font-size:12px;font-family:arial, helvetica, sans-serif; padding: 5px 15px 5px 15px; text-decoration:none; display:inline-block;text-shadow: 1px 1px 0 rgba(255,255,255,0.3);font-weight:normal; color: #000000;
    background-color: #FFFFFF; background-image: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#CFCFCF));
    background-image: -webkit-linear-gradient(top, #FFFFFF, #CFCFCF);   /* For WebKit */
    background-image: -moz-linear-gradient(top, #FFFFFF, #CFCFCF);      /* For Mozilla */
    background-image: -ms-linear-gradient(top, #FFFFFF, #CFCFCF);       /* For IE10+ */
    background-image: -o-linear-gradient(top, #FFFFFF, #CFCFCF);        /* For Opera */
    background-image: linear-gradient(to bottom, #FFFFFF, #CFCFCF);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FFFFFF, endColorstr=#CFCFCF);
}

.button:hover {
    border:1px solid #7A7A7A;
    background-color: #EEEEEE; background-image: -webkit-gradient(linear, left top, left bottom, from(#EEEEEE), to(#C7C7C7));
    background-image: -webkit-linear-gradient(top, #EEEEEE, #C7C7C7);   /* For WebKit */
    background-image: -moz-linear-gradient(top, #EEEEEE, #C7C7C7);      /* For Mozilla */
    background-image: -ms-linear-gradient(top, #EEEEEE, #C7C7C7);       /* For IE10+ */
    background-image: -o-linear-gradient(top, #EEEEEE, #C7C7C7);        /* For Opera */
    background-image: linear-gradient(to bottom, #EEEEEE, #C7C7C7);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#EEEEEE, endColorstr=#C7C7C7);
}

/**
 * Social Media Buttons Spin Animated
 */

/* Tapping the social media icon on a mobile device animates its 360-degree rotation */
.social-roll {
    height: 36px;
    width: 36px;
    margin: 10px;
    float: left;
    border-radius: 50%;
    -webkit-transition: all ease 0.3s;  /* For WebKit */
    -moz-transition: all ease 0.3s;     /* For Mozilla */
    -o-transition: all ease 0.3s;       /* For Opera */
    -ms-transition: all ease 0.3s;      /* For IE10+ */
    transition: all ease 0.3s;          /* Generic */
}

/* Hovering over the social media icon animates its 360-degree rotation */
.social-roll:hover {
    -webkit-transform:rotate(360deg);  /* For WebKit */
    -moz-transform:rotate(360deg);     /* For Mozilla */
    -o-transform:rotate(360deg);       /* For Opera */
    -ms-transform:rotate(360deg);      /* For IE10+ */
    transform:rotate(360deg);          /* Generic */
}

/*** Styling the Header Component of the Site Template ***

The following styles are used in the headerTemplate.xhtml file as:
    <h:panelGrid columns="2" columnClasses="leftAlign, rightAlign">
 */

/* This places the Virginia Tech logo on the left top corner */
.leftTopCornerAlign {
    position: absolute;
    left: 0;
    top: 0;
    padding: 10px;
}

/* This places the horizontal cascading PrimeFaces navigation menu bar on the right top corner */
.rightTopCornerAlign {
    position: absolute;
    right: 0;
    top: 0;
    padding: 10px;
}

/* awesome button */
.bigGrey {
	-moz-box-shadow:inset 0px 1px 0px 0px #91b8b3;
	-webkit-box-shadow:inset 0px 1px 0px 0px #91b8b3;
	box-shadow:inset 0px 1px 0px 0px #91b8b3;
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #768d87), color-stop(1, #6c7c7c));
	background:-moz-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
	background:-webkit-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
	background:-o-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
	background:-ms-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
	background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#768d87', endColorstr='#6c7c7c',GradientType=0);
	background-color:#768d87;
	-moz-border-radius:29px;
	-webkit-border-radius:29px;
	border-radius:29px;
	border:1px solid #566963;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Arial;
	font-size:18px;
	font-weight:bold;
	padding:10px 10px;
	text-decoration:none;
	text-shadow:0px -1px 0px #2b665e;
}
.bigGrey:hover {
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6c7c7c), color-stop(1, #768d87));
	background:-moz-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
	background:-webkit-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
	background:-o-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
	background:-ms-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
	background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#6c7c7c', endColorstr='#768d87',GradientType=0);
	background-color:#6c7c7c;
}
.bigGrey:active {
	position:relative;
	top:1px;
}

.font-style {
	font-family: times, Times New Roman, times-roman, georgia, serif;
	color: #444;
	margin: 0;
	padding: 0px 0px 6px 0px;
	font-size: 51px;
	line-height: 44px;
	letter-spacing: -2px;
	font-weight: bold;
        padding-top: 20px;
        padding-bottom: 30px;
}

